--- a/Docker/Autominirep_yml/docker-compose.yml
+++ b/Docker/Autominirep_yml/docker-compose.yml
@@ -1,23 +1,29 @@
-FROM python:3.12-slim
+services:
+  autominirep:
+    build:
+      context: .                # raíz del repo (donde está el Dockerfile y tu código Django)
+      dockerfile: Dockerfile
+    image: autominirep-app:latest
+    restart: unless-stopped
+    ports:
+      - "${APP_PORT:-8081}:8000"     # publica 8081 por defecto
+    environment:
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+      DJANGO_DEBUG: ${DJANGO_DEBUG:-0}
 
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
+      PGDATABASE: ${PGDATABASE}
+      PGUSER: ${PGUSER}
+      PGPASSWORD: ${PGPASSWORD}
+      PGHOST: ${PGHOST}
+      PGPORT: ${PGPORT}
 
-WORKDIR /app
+      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS:-72.60.56.56,localhost,127.0.0.1}
+      CSRF_TRUSTED_ORIGINS: ${CSRF_TRUSTED_ORIGINS:-http://72.60.56.56:${APP_PORT:-8081}}
+      TZ: ${TZ:-America/Lima}
+    volumes:
+      - staticfiles:/app/staticfiles
+      - media:/app/media
 
-# deps básicos
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ca-certificates curl && rm -rf /var/lib/apt/lists/*
-
-# requirements
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-# copia del proyecto
-COPY . /app
-
-# collectstatic (no rompe si no hay estáticos)
-RUN python manage.py collectstatic --noinput || true
-
-EXPOSE 8000
-CMD ["gunicorn", "core.wsgi:application", "-b", "0.0.0.0:8000", "-w", "3", "--timeout", "60"]
+volumes:
+  staticfiles:
+  media:
