--- a/Docker/Autominirep_yml/docker-compose.yml
+++ b/Docker/Autominirep_yml/docker-compose.yml
@@ -1,22 +1,20 @@
 services:
   autominirep:
     build:
-      context: .                # raíz del repo (donde está el Dockerfile y tu código Django)
-      dockerfile: Dockerfile
+      context: ..            # <- sube un nivel (a la raíz del repo)
+      dockerfile: Dockerfile # <- ahí está el Dockerfile
     image: autominirep-app:latest
     restart: unless-stopped
     ports:
-      - "${APP_PORT:-8081}:8000"     # publica 8081 por defecto
+      - "${APP_PORT:-8081}:8000"  # publica 8081 por defecto
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DJANGO_DEBUG: ${DJANGO_DEBUG:-0}
-
       PGDATABASE: ${PGDATABASE}
       PGUSER: ${PGUSER}
       PGPASSWORD: ${PGPASSWORD}
       PGHOST: ${PGHOST}
       PGPORT: ${PGPORT}
-
       DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS:-72.60.56.56,localhost,127.0.0.1}
       CSRF_TRUSTED_ORIGINS: ${CSRF_TRUSTED_ORIGINS:-http://72.60.56.56:${APP_PORT:-8081}}
       TZ: ${TZ:-America/Lima}
