--- a/Docker/Autominirep_yml/docker-compose.yml
+++ b/Docker/Autominirep_yml/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   autominirep:
     build:
-      context: ..            # <- sube un nivel (a la raíz del repo)
-      dockerfile: Dockerfile # <- ahí está el Dockerfile
+      context: .
+      dockerfile: ./Dockerfile   # explícito
     image: autominirep-app:latest
     restart: unless-stopped
     ports:
-      - "${APP_PORT:-8081}:8000"  # publica 8081 por defecto
+      - "${APP_PORT:-8081}:8000"
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DJANGO_DEBUG: ${DJANGO_DEBUG:-0}
@@ -17,11 +17,12 @@ services:
       PGPORT: ${PGPORT}
       DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS:-72.60.56.56,localhost,127.0.0.1}
       CSRF_TRUSTED_ORIGINS: ${CSRF_TRUSTED_ORIGINS:-http://72.60.56.56:${APP_PORT:-8081}}
-      TZ: ${TZ:-America/Lima}
     volumes:
-      - staticfiles:/app/staticfiles
-      - media:/app/media
+      - autominirep_static:/app/staticfiles
+    command: >
+      sh -c "python manage.py migrate &&
+             python manage.py collectstatic --noinput &&
+             gunicorn config.wsgi:application --bind 0.0.0.0:8000"
 
 volumes:
-  staticfiles:
-  media:
+  autominirep_static:
