--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 Django==5.2.7
-psycopg[binary]==3.2.12
 gunicorn==23.0.0
+psycopg[binary]==3.2.12
+dj-database-url==2.2.0
+django-widget-tweaks==1.5.0
