--- a/Docker/Autominirep_yml/docker-compose.yml
+++ b/Docker/Autominirep_yml/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   autominirep:
-    build:
-      context: .
-      dockerfile: ./Dockerfile   # explícito
     image: autominirep-app:latest
+    build:
+      context: ../..                      # ← raíz del repo
+      dockerfile: Docker/Autominirep_yml/Dockerfile
     restart: unless-stopped
     ports:
       - "${APP_PORT:-8081}:8000"
@@ -17,12 +17,8 @@ services:
       PGPORT: ${PGPORT}
       DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS:-72.60.56.56,localhost,127.0.0.1}
       CSRF_TRUSTED_ORIGINS: ${CSRF_TRUSTED_ORIGINS:-http://72.60.56.56:${APP_PORT:-8081}}
+      TZ: ${TZ:-America/Lima}
     volumes:
       - autominirep_static:/app/staticfiles
-    command: >
-      sh -c "python manage.py migrate &&
-             python manage.py collectstatic --noinput &&
-             gunicorn config.wsgi:application --bind 0.0.0.0:8000"
-
 volumes:
   autominirep_static:
